# ccdclinic

./: .dockerignore  .env.example  .gitattributes  .gitignore  CORS_DEPLOYMENT_FIX.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  RENDER_SETUP.md  SUPABASE_SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  vercel.json
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  render-start.sh  rust-toolchain  rust-toolchain.toml  schema.sql  supabase_visit_policies.sql
backend/examples/: create_user.rs  gen_password_hash.rs
backend/public/: index.html
backend/public/assets/: index-B2j_K1Yi.js  index-B35CalAz.js  index-BDml-IMR.js  index-BZxjqImB.js  index-BxHtuD4I.css  index-CHbh8Jx9.js  index-CJdOTs8u.js  index-D2VMO7lU.css  index-DEpB2d2r.css  index-DgozEH7I.js  index-DtzDeUwy.css  index-DzXL61cX.js  index-vULnxIGv.js  index.es--w1jZuJX.js  index.es-92TwYqYW.js  index.es-BRh0Wqtf.js  index.es-CfvOhiyP.js  index.es-DVCHUfE_.js  index.es-DjKbyLSv.js  index.es-DxFRhnce.js  index.es-Dxr5Sk0p.js  index.es-mSstvuMm.js  jspdf.es.min-1a6SPwEu.js  jspdf.es.min-8uPdydG8.js  jspdf.es.min-C33c6kq1.js  jspdf.es.min-CNxBJkjb.js  jspdf.es.min-CPoV7geH.js  jspdf.es.min-Cojhzbxl.js  jspdf.es.min-Dfy_xlOk.js  jspdf.es.min-DgZ7Dw-N.js  jspdf.es.min-rej5YgFA.js
backend/src/: db.rs  engine.rs  limiters.rs  main.rs  schema.rs  supabase.rs
backend/src/api/: auth.rs  bmi.rs  clinic.rs  inventory.rs  inventory_logs.rs  medical_documents.rs  mod.rs  staff.rs  students.rs  visits.rs
backend/src/routes/: auth.rs  bmi.rs  mod.rs  (+7 more)
(+58 files in other folders)
