[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.10", features = ["json", "multipart", "stream", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "blocking", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "backend"
path = "src/main.rs"
